--- a/modelo.html
+++ b/modelo.html
@@ -8,7 +8,7 @@
 </head>
 <body onload="carregar()">
     <header>
-        <h1>Hora do Dida</h1>
+        <h1>Hora do Diaaaas</h1>
     </header>
     <section>
         <div id="msg">
